99_slot-reinvent-serverless/serving/helloworld-service-1.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: helloworld
  namespace: default
spec:
  template:
    metadata:
      name: helloworld-world
    spec:
      containers:
        - image: gcr.io/knative-samples/helloworld-go
          env:
            - name: "TARGET"
              value: "World"
